add google auth hostname
